pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/manifest/replace.ub
manifest: {
  replace: {
    'example.com/lib': '../one'
    'example.com/lib': '../two'
  }
}
